<resources>
    <string name="app_name">Never Forget</string>
    <string name="action_settings">Beállítások</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Tovább</string>
    <string name="previous">Vissza</string>

    <!-- Strings -->
    <string name="userName">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="loginName">Név</string>
    <string name="generatePassword">Generálj</string>
    <string name="newLogin">Új jelszó</string>
    <string name="accept">Elfogad</string>
    <string name="remove">Törlöl</string>
    <string name="modify">Módosít</string>
</resources>
